--- a/package.json
+++ b/package.json
@@ -8,6 +8,22 @@
     "start": "cordova run browser"
   },
   "devDependencies": {
-    "cordova": "^6.5.0"
+    "cordova": "^8.0.0"
+  },
+  "dependencies": {
+    "cordova-android": "^7.0.0",
+    "cordova-browser": "^5.0.3",
+    "cordova-ios": "^4.5.4",
+    "cordova-plugin-whitelist": "^1.3.3"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {}
+    },
+    "platforms": [
+      "android",
+      "ios",
+      "browser"
+    ]
   }
 }
