--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build-android": "cordova build android",
+    "build-ios": "cordova build ios",
     "postinstall": "cordova prepare",
-    "start": "cordova run browser"
+    "start": "cordova run browser",
+    "start-android": "cordova run android",
+    "start-ios": "cordova run ios"
   },
   "devDependencies": {
     "cordova": "^8.0.0"
