fix cordova-icon command for android icons

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dist": "npm run dist-android && npm run dist-ios",
     "dist-android": "cordova build android --release",
     "dist-ios": "cordova build android --release && npm run open-xcode",
-    "generate-cordova-icon": "cordova-icon --icon=icons/icon.png",
+    "fix-cordova-icons-android-path": "cp -r platforms/android/res platforms/android/app/src/main && rm -rf platforms/android/res",
+    "generate-cordova-icon": "cordova-icon --icon=icons/icon.png && npm run fix-cordova-icons-android-path",
     "open-android-studio": "open -a /Applications/Android\\ Studio.app platforms/android/",
     "open-xcode": "open platforms/ios/HelloCordova.xcworkspace",
     "postinstall": "cordova prepare && npm run generate-cordova-icon",
