--- a/package.json
+++ b/package.json
@@ -30,11 +30,18 @@
     "cordova-android": "^7.0.0",
     "cordova-browser": "^5.0.3",
     "cordova-ios": "^4.5.4",
+    "cordova-plugin-customurlscheme": "https://github.com/EddyVerbruggen/Custom-URL-scheme.git",
     "cordova-plugin-whitelist": "^1.3.3"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-customurlscheme": {
+        "URL_SCHEME": "mycoolapp",
+        "ANDROID_SCHEME": "http",
+        "ANDROID_HOST": "app.mycoolapp.com",
+        "ANDROID_PATHPREFIX": "/"
+      }
     },
     "platforms": [
       "android",
