--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cordova-browser": "^5.0.3",
     "cordova-ios": "^4.5.4",
     "cordova-plugin-customurlscheme": "https://github.com/EddyVerbruggen/Custom-URL-scheme.git",
+    "cordova-plugin-firebase": "^0.1.25",
     "cordova-plugin-whitelist": "^1.3.3"
   },
   "cordova": {
@@ -41,7 +42,8 @@
         "ANDROID_SCHEME": "http",
         "ANDROID_HOST": "app.mycoolapp.com",
         "ANDROID_PATHPREFIX": "/"
-      }
+      },
+      "cordova-plugin-firebase": {}
     },
     "platforms": [
       "android",
