--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "cordova-android": "^7.0.0",
     "cordova-browser": "^5.0.3",
     "cordova-ios": "^4.5.4",
+    "cordova-plugin-badge": "^0.8.7",
     "cordova-plugin-customurlscheme": "https://github.com/EddyVerbruggen/Custom-URL-scheme.git",
+    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-whitelist": "^1.3.3"
   },
   "cordova": {
@@ -41,7 +44,8 @@
         "ANDROID_SCHEME": "http",
         "ANDROID_HOST": "app.mycoolapp.com",
         "ANDROID_PATHPREFIX": "/"
-      }
+      },
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android",
